--- a/협업/react-tving-clone/package.json
+++ b/협업/react-tving-clone/package.json
@@ -15,6 +15,7 @@
     "react-select": "^5.8.0",
     "sass": "^1.69.5",
     "simplebar-react": "^3.2.4",
+    "swiper": "^11.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
