--- a/협업/react-tving-clone/package.json
+++ b/협업/react-tving-clone/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.19.0",
     "react-scripts": "5.0.1",
+    "react-select": "^5.8.0",
     "sass": "^1.69.5",
     "swiper": "^11.0.4",
     "web-vitals": "^2.1.4"
