--- a/협업/react-tving-clone/package.json
+++ b/협업/react-tving-clone/package.json
@@ -10,6 +10,7 @@
     "ladash": "^1.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-lazy-load-image-component": "^1.6.0",
     "react-router-dom": "^6.19.0",
     "react-scripts": "5.0.1",
     "sass": "^1.69.5",
