--- a/협업/react-tving-clone/package.json
+++ b/협업/react-tving-clone/package.json
@@ -10,11 +10,13 @@
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-lazy-load-image-component": "^1.6.0",
     "react-router-dom": "^6.19.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.8.0",
     "sass": "^1.69.5",
     "simplebar-react": "^3.2.4",
+    "sweetalert2": "^11.10.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
