--- a/0124_jtbc-news-app-publishing/.gitignore
+++ b/0124_jtbc-news-app-publishing/.gitignore
@@ -44,6 +44,14 @@ next-env.d.ts
 !.yarn/sdks
 !.yarn/versions
 
+/.yarn/*
+.yarn/cache
+.yarn/patches
+.yarn/plugins
+.yarn/releases
+.yarn/sdks
+.yarn/versions
+
 # eslint cache
 .eslintcache
 
